--- a/planing.html
+++ b/planing.html
@@ -21,7 +21,7 @@
 			<div style="clear:both;width:100%; margin-bottom:30px;"></div>
 
 			<div >
-				<button class="accordion">Objetivos <img src="img/objetivos.png" width="50"></button>
+				<button class="accordion">Objetivos <img src="img/biblio.png" width="50"></button>
 				<div class="panel1" text-align: left >
                     
 				 	<p><strong>General: </strong></p>
