--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </ul>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/css1.png" alt="CSS Code" width="100px" height="450px">
+                <img src="images/css1.png" alt="CSS Code" >
             </div>
 
             <div class="carousel-item">
