--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         </ul>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/css1.png" alt="CSS Code" width="700" height="430">
+                <img src="images/css1.png" alt="CSS Code" width="1024" height="768">
             </div>
 
             <div class="carousel-item">
-                <img src="images/css2.jpg" alt="Chicago" width="1000" height="477px">
+                <img src="images/css2.jpg" alt="Chicago" width="1024" height="768">
                 <div class="carousel-caption">
                   <h3>APRENDE</h3>
                   <p>ES HORA DE CONOCER EL MUNDO WEB</p>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="carousel-item img-fluid">
-                <img src="images/css3.png" alt="New York"  width="700" height="430">
+                <img src="images/css3.png" alt="New York"  width="1024" height="768">
                 <div class="carousel-caption ">
                   <h3>EXPLORA</h3>
                   <p>CREA UN ESTILO PROPIO</p>
