--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <li data-target="#demo" data-slide-to="1"></li>
             <li data-target="#demo" data-slide-to="2"></li>
         </ul>
-        <div class="carousel-inner">
+        <div class="carousel-item img-fluid">
             <div class="carousel-item active">
                 <img src="images/css1.png" alt="CSS Code" width="1024" height="768">
             </div>
 
-            <div class="carousel-item">
+            <div class="carousel-item img-fluid">
                 <img src="images/css2.jpg" alt="Chicago" width="1024" height="768">
                 <div class="carousel-caption">
                   <h3>APRENDE</h3>
