--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>   
             </div>
 
-            <div class="carousel-item img-fluid">
+            <div class="carousel-item">
                 <img src="images/css3.png" alt="New York" width="1100" height="500">
                 <div class="carousel-caption ">
                   <h3>EXPLORA</h3>
