--- a/Means2.html
+++ b/Means2.html
@@ -52,7 +52,7 @@
     <div style="clear:both;width:100%; margin-bottom:40px;"></div>
     
     <div id="band" class="container text-center style="color:#FF0000"" >
-        <h3>Como se ve una clase CCSS</h3>
+        <h3>Como se ve una clase CSS</h3>
     </div>
    
     
