--- a/Concept2.html
+++ b/Concept2.html
@@ -54,7 +54,7 @@
                             <div class="dropdown-menu">
                             <a class="dropdown-item" href="activity1.html">Actividad 1</a>
                             <a class="dropdown-item" href="activity2.html">Actividad 2</a>
-                            <a class="dropdown-item" href="activity2.html">Evaluacion del Sitio</a>
+                            <a class="dropdown-item" href="SiteMeans.html">Evaluacion del Sitio</a>
                         </div>
                     </li>      
                 </ul>  
