--- a/Concept1.html
+++ b/Concept1.html
@@ -15,19 +15,10 @@
   <script type="text/javascript" src="js/datatable.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.css" />
-  <link href="css/Site.css" rel="stylesheet" type="text/css">
+  <link href="Css/Site.css" rel="stylesheet" type="text/css">
     
 
 </head>
-<script> 
-    $(document).ready(function () {
-      $('#dtBasicExample').DataTable({
-        "pagingType": "full" // "simple" option for 'Previous' and 'Next' buttons only
-      });
-      $('.dataTables_length').addClass('bs-select');
-    });
-</script> 
-    
 <body>  
      <div>
         <nav class="navbar navbar-expand-sm bg-light navbar-dark">
