--- a/Means2.html
+++ b/Means2.html
@@ -12,7 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link href="css/Site.css" rel="stylesheet" type="text/css">
+  <link href="Css/Site.css" rel="stylesheet" type="text/css">
 </head>
     
 <body>  
@@ -70,8 +70,8 @@
     
      <div >
         <center>
-        <img src="images/claseCss.png"  >
-            </center>
+          <img src="images/claseCss.png"  >
+         </center>
     </div>
 </body>
 </html>
