--- a/Means1.html
+++ b/Means1.html
@@ -66,10 +66,12 @@
         <h3>Como se implementa</h3>
     </div>
    
+     <div style="clear:both;width:100%; margin-bottom:40px;"></div>
+    
     <div >
         <center>
-        <img src="images/Implementacion.png"  >
-            </center>
+            <iframe width="600" height="355" src="https://www.youtube.com/embed/nPiJf6BrdsU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </center>
     </div>
 </body>
 </html>
